# robocup-rmrc-2026

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RMRC 2025 Construction Guide 2025-07-09.txt  RoboCup_Rescue_2025_Rulebook.txt  SECURITY.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
docs/: AUTONOMY_ONE_MAP.md  AUTO_MISSION_INTEGRATION.md  CAMERA_FPS_TIPS.md  CAMERA_MODULE_REVIEW.md  COMPETITION_CHECKLIST.md  FULL_SPRINT_IMPLEMENTATION_PLAN.md  OPERATOR_RUNBOOK.md  PLAN_IMPLEMENTATION_SUMMARY.md  PROJECT_CONTEXT.md  QR_TROUBLESHOOTING.md  rerun_integration.md
jetson/: arm_presets.py  auto_behaviors.py  auto_mission_node.py  autonomy_executor.py  autonomy_node.py  camera_stream.py  cloud_downsampler.py  deepstream_yolo_node.py  drive_bridge.py  followerarm.py  gpu_camera_node.py  launch_nav2.sh  launch_robot_model.sh  launch_slam_full.py  nav2_bridge.py  point_cloud_downsampler.py  preflight_check.py  requirements.txt  rerun_bridge.py  rviz_streamer.py  slam_bridge.py  slam_visualizer.launch.py  start_robot.sh  start_slam.sh  start_slam_viz.sh  status_publisher.py  stream_rviz.sh  tensorrt_camera_node.py  test_rviz_stream.sh
jetson/drive_bridge_cpp/: CMakeLists.txt  build.sh
jetson/drive_bridge_cpp/include/: drive_bridge.hpp
jetson/drive_bridge_cpp/src/: drive_mixer.cpp  main.cpp  serial_port.cpp  zmq_receiver.cpp
laptop/: main.py  pi_camera_viewer.py  run_gui.py  run_joystick.py
pi/: camera_stream.py  pi_camera_viewer.py  requirements.txt
pico_cpp/: CMakeLists.txt  build.sh
pico_cpp/src/: main.cpp  motor.cpp  pico_drive.hpp  serial_parser.cpp
(+92 files in other folders)
